Mise en place interactivite

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,36 @@
 
     <p id="explication"> Cette application permet de trouver un itinéraire à vélo le plus sûr et confortable possible. Définissez votre point de départ et destination, soit en cliquant sur la carte soit en cherchant l'adresse.</p>
 
+    <!-- Add fake buttons for start and destinations -->
+    <div class="input-group mb-3">
+    <div class="input-group-prepend">
+    <span class="input-group-text" id="basic-addon1">Dep</span>
+    </div>
+    <input type="text" class="form-control" placeholder="Départ (ou clique sur carte)" aria-label="Départ" aria-describedby="basic-addon1">
+    <hr>
+    <div class="input-group mb-3">
+    <div class="input-group-prepend">
+    <span class="input-group-text" id="basic-addon2">Dest</span>
+    </div>
+    <input type="text" class="form-control" placeholder="Destination (ou clique sur carte)" aria-label="Destination" aria-describedby="basic-addon2">
+
+  </a>
+</div>
+
+        <div class="row">
+        <div class="input-group col-md-4">
+            <input class="form-control py-2" type="search" value="search" id="example-search-input">
+            <span class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button">
+                    <i class="fa fa-search"></i>
+                </button>
+            </span>
+        </div>
+    </div>
+
+</div>
+</div>
+
     <button type="button" class="btnGetLoc" id="btnGetLoc"></button>
 
     </div>
