--- a/templates/base.html
+++ b/templates/base.html
@@ -36,10 +36,10 @@
         <!-- Create different buttons -->
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <!-- dummy page just for testing -->
+{#                 <!-- dummy page just for testing -->
                 <li class="nav-item">
                   <a class="nav-link" href="{{ url_for('comments') }}">Comments</a>
-                </li>
+                </li> #}
                 <!-- About page that gives more information about the work -->
                 <li class="nav-item">
                   <a class="nav-link" href="{{ url_for('about') }}">About</a>
