Add reset button

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,6 +60,11 @@
                 </button>
             </div>
         </div> <!-- End of destination button -->
+        <!-- Add a rest button -->
+        <button id="resetBtn"  type="button" title="Remettre à zéro destination et départ">
+            Reset
+        </button>
+
 
 
     </div> <!-- end of sidebar -->
