Editing code for crs matching btw leaflet and python

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,13 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css" integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js" integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
 
+    <!-- linkk to Proj4JS and Proj4leaflet -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.8.0/proj4-src.min.js' integrity='sha512-iI+gnM9YVv7BvTOmF+2w2f154LkOee1RAa3lDt9C1EPTfJDMtGPj/tuCyJTpH6M8sjQg8Mdl/xvF4ZgqiVpREw==' crossorigin='anonymous'></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.8.0/proj4-src.min.js" integrity="sha512-iI+gnM9YVv7BvTOmF+2w2f154LkOee1RAa3lDt9C1EPTfJDMtGPj/tuCyJTpH6M8sjQg8Mdl/xvF4ZgqiVpREw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+
+
     <!-- Load leaflet geo search. Has to be  AFTER leaflet.js, when using with leaflet -->
     <script src="https://unpkg.com/leaflet-geosearch@3.7.0/dist/geosearch.umd.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet-geosearch@3.7.0/dist/geosearch.css"/>
