--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
         </div> <!-- End of destination button -->
 
         <!-- Add a reset button for adresses  -->
-        <button id="resetBtn"  type="button" title="Remettre à zéro destination et départ">
+        <button id="resetBtn"  type="button" title="Remettre à zéro la destination et le départ" onclick=reset()>
             Recommencer
         </button>
 
