Edit id in html

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,12 +69,12 @@
         </div>
         <div class="form-check form-switch">
             <!-- Heure de pointe matin (7-8h) -->
-            <input class="form-check-input" type="checkbox" role="switch" id="matin" checked>
+            <input class="form-check-input" type="checkbox" role="switch" id="HP_matin" checked>
             <label class="form-check-label" for="matin"> Heure de pointe matin 7-8h </label>
         </div>
         <div class="form-check form-switch">
             <!-- Heure de pointe soir (17-18h) -->
-            <input class="form-check-input" type="checkbox" role="switch" id="soir" disabled>
+            <input class="form-check-input" type="checkbox" role="switch" id="HP_soir" disabled>
             <label class="form-check-label" for="soir"> Heure de pointe soir 17-18h </label>
         </div>      
 
