--- a/templates/index.html
+++ b/templates/index.html
@@ -59,24 +59,26 @@
         <!-- Checkboxes to personalize routing data-->
         <div class="form-check form-switch">
             <!-- VAE -->
-            <input class="form-check-input" type="checkbox" role="switch" id="VAE">
+            <input class="form-check-input" type="checkbox" role="switch" id="VAE" name="checkbox_vae">
             <label class="form-check-label" for="VAE">Vélo à Assitance Electrique </label>
         </div>
         <div class="form-check form-switch">
             <!-- Intersections -->
-            <input class="form-check-input" type="checkbox" role="switch" id="intersections" checked>
+            <input class="form-check-input" type="checkbox" role="switch" id="intersections" name="checkbox_inter" checked>
             <label class="form-check-label" for="intersections"> Intersections </label>
         </div>
         <div class="form-check form-switch">
             <!-- Heure de pointe matin (7-8h) -->
-            <input class="form-check-input" type="checkbox" role="switch" id="HP_matin" checked>
+            <input class="form-check-input" type="checkbox" role="switch" id="HP_matin" name="checkbox_MSP">
             <label class="form-check-label" for="matin"> Heure de pointe matin 7-8h </label>
         </div>
         <div class="form-check form-switch">
             <!-- Heure de pointe soir (17-18h) -->
-            <input class="form-check-input" type="checkbox" role="switch" id="HP_soir" disabled>
+            <input class="form-check-input" type="checkbox" role="switch" id="HP_soir" name="checkbox_ASP" disabled>
             <label class="form-check-label" for="soir"> Heure de pointe soir 17-18h </label>
         </div>      
+
+
 
 
 
