Editing app.py routes

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
             </div>
         </div> <!-- End of destination button -->
 
-        <!-- Add a reset button for adresses  -->
+        <!-- Add a reset button for lat/lon/path. the function is defined in js file  -->
         <button id="resetBtn"  type="button" title="Remettre à zéro la destination et le départ" onclick=reset()>
             Recommencer
         </button>
