--- a/templates/index.html
+++ b/templates/index.html
@@ -18,16 +18,16 @@
             <div class="input-group mb-3">
                 <!-- Prepend, what is in front (image of marker) -->
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon1"> <img src="static/img/marker_dep.svg" width="35" height="15"> </span>
+                    <span class="input-group-text" id="basic-addon1"> <img src="static/img/marker_dep.svg" width="45" height="20"> </span>
                 </div>
                 <!-- Geosearcher text box from Leaflet Geosearch-->
                 <form id="geosearch_depart">
-                    <input type="text" placeholder="Adresse de départ (Ou clique sur carte)" value="">
+                    <input type="text" placeholder="Adresse de départ (Ou clique sur carte/bouton)" value="">
                 </form>
                 <!-- Append, what is after text box ; button to get localisation (image of localisation) -->
                 <div class="input-group-append">
                     <button id="btnGetLocStart" formmethod="post" class="btn btn-outline-secondary current-location"  type="button" title="Centrer sur votre position">
-                    <img src="/static/img/current-location.svg" width="15" height="15">
+                    <img src="/static/img/current-location.svg" width="18" height="18">
                     </button>
                 </div>
             </div> <!-- End start button -->
@@ -37,16 +37,16 @@
             <div class="input-group mb-3">
                 <!-- Prepend, what is in front (image of marker) -->
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon1"> <img src="static/img/marker_dest.svg" width="35" height="15"> </span>
+                    <span class="input-group-text" id="basic-addon1"> <img src="static/img/marker_dest.svg" width="45" height="20"> </span>
                 </div>
                 <!-- Geosearcher text box from Leaflet Geosearch-->
                 <form id="geosearch_dest">
-                    <input type="text" placeholder="Adresse de destination (Ou clique sur carte)" value="">
+                    <input type="text" placeholder="Adresse de destination (Ou clique sur carte/bouton)" value="">
                 </form>
                 <!-- Append, what is after text box ; button of get localisation (image of localisation) -->
                 <div class="input-group-append">
                     <button id="btnGetLocDest" class="btn btn-outline-secondary current-location" type="button" title="Centrer sur votre position">
-                    <img src="/static/img/current-location.svg" width="15" height="15">
+                    <img src="/static/img/current-location.svg" width="18" height="18">
                     </button>
                 </div>
             </div> <!-- End of destination button -->
